Fix chrome bar to bottom of 16:9 container, not viewport so we don't overlap content. Closes #1006

--- a/less/app.less
+++ b/less/app.less
@@ -369,7 +369,7 @@ svg {
 */
 
 .header-container {
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 1vh;
     width: 100%;
